--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-azure-storage",
   "description": "Azure storage wrapper",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "author": {
     "name": "okunishinishi",
     "email": "okunishinishi@gmail.com",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "azure-storage": "^2.10.2",
+    "mime": "^2.4.0",
     "moment": "^2.22.2",
     "uuid": "^3.3.2"
   },
